/******************************************************************************
 *                                                                            *
 *                    Copyright 2016 Subterranean Security                    *
 *                                                                            *
 *  Licensed under the Apache License, Version 2.0 (the "License");           *
 *  you may not use this file except in compliance with the License.          *
 *  You may obtain a copy of the License at                                   *
 *                                                                            *
 *      http://www.apache.org/licenses/LICENSE-2.0                            *
 *                                                                            *
 *  Unless required by applicable law or agreed to in writing, software       *
 *  distributed under the License is distributed on an "AS IS" BASIS,         *
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  *
 *  See the License for the specific language governing permissions and       *
 *  limitations under the License.                                            *
 *                                                                            *
 *****************************************************************************/
syntax = "proto2";

package core.net.sequences;

option java_package = "com.subterranean_security.crimson.proto.core.net.sequences";

message RQ_AddUser {
	required string user = 1;
	optional string password = 2;
	repeated int64 permissions = 3;

}

message RS_AddUser {
	required bool result = 1;
	optional string comment = 2;

}

message RQ_EditUser {
	required RQ_AddUser user = 1;
	optional string old_password = 2;
}

message RS_EditUser {
	required bool result = 1;
	optional string comment = 2;

}